# web_playground

./: .gitignore  .project  Makefile  README.md  david-happy.cabal  myhappy.hs
demo/: clock.js
doc/: todo.rst
fun/: lua_demo.html  test.lua
src/: Acid.hs  AppData.hs  Blog.hs  BlogTypes.hs  Heist.hs  Log.hs  Main.hs  TestAcid.hs  Types.hs
static/: blog.html  clock.html  clock.js  demo.html  first_novel.rst  index.html  message.html  page2.html  robots.txt  rotate_rect.html  rotate_rect.js  t.html  web.html
static/css/: blog.css
static/js/: ga.js
static/test/: link_symbol.c
static/tpls/: fact.tpl  index.tpl  test.md  test_apply.tpl
vue/: package.json  test.html
vue/js/: test.js
