name:           david-happy
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         david

executable david-happy
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   text, blaze-html,
                   happstack-server >= 7.0.0 && < 7.2,
                   acid-state,
                   safecopy,
                   mtl
  ghc-options:     -Wall
  extensions:      CPP

